src/test/ui/lifetime-errors/two_anonymous.stderr
error[E0312]: lifetime of reference outlives lifetime of borrowed content...
  --> $DIR/two_anonymous.rs:19:13
   |
19 |             x
   |             ^
   |
note: ...the reference is valid for the lifetime 'a as defined on the method body at 15:5...
  --> $DIR/two_anonymous.rs:15:5
   |
15 | /     fn foo2<'a>(&self, x: &i32) -> &'a i32 {
16 | |         if true {
17 | |             &self.field
18 | |         } else {
19 | |             x
20 | |         }
21 | |     }
   | |_____^
note: ...but the borrowed content is only valid for the anonymous lifetime #2 defined on the method body at 15:5
  --> $DIR/two_anonymous.rs:15:5
   |
15 | /     fn foo2<'a>(&self, x: &i32) -> &'a i32 {
16 | |         if true {
17 | |             &self.field
18 | |         } else {
19 | |             x
20 | |         }
21 | |     }
   | |_____^

error[E0495]: cannot infer an appropriate lifetime for borrow expression due to conflicting requirements
  --> $DIR/two_anonymous.rs:17:13
   |
17 |             &self.field
   |             ^^^^^^^^^^^
   |
note: first, the lifetime cannot outlive the anonymous lifetime #1 defined on the method body at 15:5...
  --> $DIR/two_anonymous.rs:15:5
   |
15 | /     fn foo2<'a>(&self, x: &i32) -> &'a i32 {
16 | |         if true {
17 | |             &self.field
18 | |         } else {
19 | |             x
20 | |         }
21 | |     }
   | |_____^
note: ...so that reference does not outlive borrowed content
  --> $DIR/two_anonymous.rs:17:13
   |
17 |             &self.field
   |             ^^^^^^^^^^^
note: but, the lifetime must be valid for the lifetime 'a as defined on the method body at 15:5...
  --> $DIR/two_anonymous.rs:15:5
   |
15 | /     fn foo2<'a>(&self, x: &i32) -> &'a i32 {
16 | |         if true {
17 | |             &self.field
18 | |         } else {
19 | |             x
20 | |         }
21 | |     }
   | |_____^
note: ...so that reference does not outlive borrowed content
  --> $DIR/two_anonymous.rs:17:13
   |
17 |             &self.field
   |             ^^^^^^^^^^^

error: aborting due to 2 previous errors

